--- a/index.html
+++ b/index.html
@@ -3,7 +3,14 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>test_simplicita</title>
+    <title>Prueba Simplicita</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Dancing+Script&family=Open+Sans+Condensed:ital,wght@0,300;1,300&family=Pacifico&display=swap" rel="stylesheet">
+    <style>
+      b{
+        font-family: Open Sans Condensed, sans-serif;
+      }      
+    </style>
   </head>
   <body>
     <div id="app"></div>
